- Styling: fixed rapid attendance family select text for dark mode.

--- a/RockWeb/Styles/styles-v2/blocks/_blocks-core.scss
+++ b/RockWeb/Styles/styles-v2/blocks/_blocks-core.scss
@@ -5,7 +5,7 @@
   2. Schedule Builder - block for building schedules
   3. Workflow - styles for workflow blocks
   4. Electronic Signatures
-
+  5. Rapid Attendance
 */
 
 
@@ -1137,5 +1137,30 @@ body.hide-block-role-secondary .block-instance.block-role-secondary:not(.block-r
 }
 
 // ====================== END ELECTRONIC SIGNATURE ======================
+
+// ====================== RAPID ATTENDANCE ======================
+
+.rapid-attendance-entry .mh-300 {
+  min-height: 300px;
+}
+
+.family-select-item {
+  margin-bottom: var(--spacing-small);
+  color: var(--color-interface-strong);
+  border: 1px solid var(--color-interface-softest);
+}
+
+.family-select-item.active {
+  border-color: var(--color-primary);
+}
+
+.family-select-item a {
+  display: block;
+  padding: 15px 18px;
+  color: var(--color-interface-strong) !important;
+}
+
+
+// ====================== END RAPID ATTENDANCE ======================
 
 
